fix datepicker buttons not centered with bs5 theme

--- a/playground/styles.css
+++ b/playground/styles.css
@@ -1704,7 +1704,12 @@ min-height: 20px;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
 }
-
+.laji-form .rw-widget-picker .rw-select {
+	vertical-align: middle;
+}
+.laji-form .rw-calendar-header .rw-btn, .laji-form .rw-calendar-footer .rw-btn {
+	vertical-align: baseline;
+}
 
 .laji-form .input-group .input-group-text, .laji-form .input-group .input-group-button > button {
 	height: 25px;
